@@ -142,6 +142,8 @@ let in_left_ext v intv =
 let in_interval v intv =
   in_right_ext v intv && in_left_ext v intv
 
+let init_interval (_, b) = (CBnd 0., b)
+
 
 
 let direct_subformulas = function
