@@ -1,0 +1,4 @@
+@0  R(1,2)
+@8  Q(1)
+@10 S(2) Q(1)
+@20
